--- a/Frontend/pages/User/user-profile.html
+++ b/Frontend/pages/User/user-profile.html
@@ -9,59 +9,156 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <!-- Inter Font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
     <style>
       body {
-        background: url("/Frontend/assets/image/user-profile-bg.jpg") no-repeat
-          center center fixed;
-        background-size: cover;
+        font-family: "Inter", sans-serif;
+        background-color: #000000; /* Solid black background */
         height: 100vh;
         display: flex;
         justify-content: center;
         align-items: center;
+        overflow: hidden; /* Hide scrollbars for the canvas */
+        color: #f0f0f0; /* Light text for visibility */
+      }
+
+      /* 3D Canvas Styles */
+      #three-canvas {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 0; /* Behind the content */
+        opacity: 0.7; /* Make it subtle */
       }
 
       .glass-card {
-        background: rgba(255, 255, 255, 0.15);
+        background: rgba(
+          255,
+          255,
+          255,
+          0.08
+        ); /* Very subtle white for glass effect */
         backdrop-filter: blur(10px);
         -webkit-backdrop-filter: blur(10px);
         border-radius: 20px;
         padding: 30px;
-        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4); /* Darker shadow */
         width: 400px;
-        color: #fff;
+        color: #f0f0f0; /* Light text */
+        position: relative; /* Ensure card is above canvas */
+        z-index: 1; /* Above the canvas */
+        /* Add subtle animation to the card itself */
+        animation: floatEffect 5s ease-in-out infinite;
       }
+
+      @keyframes floatEffect {
+        0% {
+          transform: translateY(0px);
+        }
+        50% {
+          transform: translateY(-10px);
+        }
+        100% {
+          transform: translateY(0px);
+        }
+      }
+
       .profile-pic {
         width: 120px;
         height: 120px;
         border-radius: 50%;
         object-fit: cover;
-        border: 3px solid #fff;
+        border: 3px solid #f0f0f0; /* White border */
         margin-bottom: 15px;
+        transition: transform 0.3s ease-in-out;
       }
+      .profile-pic:hover {
+        transform: scale(1.05) rotate(5deg);
+      }
+
       .form-control {
-        background: rgba(255, 255, 255, 0.2);
+        background: rgba(
+          255,
+          255,
+          255,
+          0.1
+        ); /* Subtle white input background */
         border: none;
-        color: #fff;
+        color: #f0f0f0; /* Light text in input */
+        outline: none; /* Remove default outline */
+      }
+      .form-control::placeholder {
+        color: #cccccc; /* Lighter placeholder text */
       }
       .form-control:focus {
         box-shadow: none;
-        border: 1px solid #fff;
-        background: rgba(255, 255, 255, 0.3);
+        border: 1px solid #f0f0f0; /* White border on focus */
+        background: rgba(255, 255, 255, 0.15); /* Slightly brighter on focus */
+        color: #ffffff; /* Pure white text on focus */
       }
       .btn-custom {
         border-radius: 30px;
         padding: 8px 20px;
+        font-weight: 600;
+        transition: all 0.3s ease;
+        letter-spacing: 0.5px; /* Slightly more spaced letters */
+      }
+      .btn-light-custom {
+        background-color: #ffffff;
+        color: #000000;
+        border: 1px solid #ffffff;
+      }
+      .btn-light-custom:hover {
+        background-color: #e0e0e0;
+        color: #000000;
+        border-color: #e0e0e0;
+        transform: translateY(-2px); /* Lift effect on hover */
+        box-shadow: 0 4px 8px rgba(255, 255, 255, 0.2);
+      }
+      .btn-dark-custom {
+        background-color: #333333;
+        color: #ffffff;
+        border: 1px solid #333333;
+      }
+      .btn-dark-custom:hover {
+        background-color: #555555;
+        color: #ffffff;
+        border-color: #555555;
+        transform: translateY(-2px); /* Lift effect on hover */
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+      }
+      .btn-secondary-custom {
+        background-color: #6c757d;
+        color: #ffffff;
+        border: 1px solid #6c757d;
+      }
+      .btn-secondary-custom:hover {
+        background-color: #5a6268;
+        color: #ffffff;
+        border-color: #5a6268;
+        transform: translateY(-2px); /* Lift effect on hover */
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
       }
       label {
         font-weight: 500;
-        color: #f1f1f1;
+        color: #f8f8f8; /* Very light gray label */
+        margin-bottom: 5px;
       }
     </style>
   </head>
   <body>
+    <!-- 3D Canvas -->
+    <canvas id="three-canvas"></canvas>
+
     <div class="glass-card text-center">
       <img
-        src="https://via.placeholder.com/120"
+        src="https://placehold.co/120x120/808080/FFFFFF?text=PROFILE"
         alt="Profile"
         class="profile-pic"
         id="profileImage"
@@ -83,6 +180,7 @@
             class="form-control"
             id="username"
             placeholder="Enter your username"
+            value="JohnDoe"
           />
         </div>
         <div class="mb-3 text-start">
@@ -92,23 +190,31 @@
             class="form-control"
             id="email"
             placeholder="Enter your email"
+            value="john.doe@example.com"
           />
         </div>
         <div class="d-flex justify-content-between">
-          <button type="button" class="btn btn-light btn-custom">Edit</button>
-          <button type="submit" class="btn btn-success btn-custom">Save</button>
+          <button type="button" class="btn btn-light-custom btn-custom">
+            Edit
+          </button>
+          <button type="submit" class="btn btn-dark-custom btn-custom">
+            Save
+          </button>
         </div>
         <div class="mt-3">
           <a
             href="forgot-password.html"
-            class="btn btn-warning btn-sm btn-custom"
+            class="btn btn-secondary-custom btn-sm btn-custom"
             >Forgot Password?</a
           >
         </div>
       </form>
     </div>
 
+    <!-- Three.js CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script>
+      // Image preview function
       function previewImage(event) {
         const reader = new FileReader();
         reader.onload = function () {
@@ -116,6 +222,223 @@
         };
         reader.readAsDataURL(event.target.files[0]);
       }
+
+      // --- Three.js for 3D background ---
+      let scene, camera, renderer, icosahedron, particles, lines;
+      let mouseX = 0,
+        mouseY = 0;
+      let windowHalfX = window.innerWidth / 2;
+      let windowHalfY = window.innerHeight / 2;
+
+      function initThreeJS() {
+        // Scene
+        scene = new THREE.Scene();
+
+        // Camera
+        camera = new THREE.PerspectiveCamera(
+          75,
+          window.innerWidth / window.innerHeight,
+          0.1,
+          1000
+        );
+        camera.position.z = 5;
+
+        // Renderer
+        renderer = new THREE.WebGLRenderer({
+          canvas: document.getElementById("three-canvas"),
+          alpha: true,
+          antialias: true,
+        });
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        renderer.setPixelRatio(window.devicePixelRatio);
+
+        // Icosahedron (main geometric shape)
+        const icoGeometry = new THREE.IcosahedronGeometry(2, 1); // Radius 2, 1 subdivision for slightly more detail
+        const icoMaterial = new THREE.MeshBasicMaterial({
+          color: 0xcccccc, // Light gray
+          wireframe: true,
+          transparent: true,
+          opacity: 0.2,
+          blending: THREE.AdditiveBlending, // For a subtle glow
+        });
+        icosahedron = new THREE.Mesh(icoGeometry, icoMaterial);
+        scene.add(icosahedron);
+
+        // Particles
+        const particleCount = 500;
+        const particleGeometry = new THREE.BufferGeometry();
+        const particlePositions = new Float32Array(particleCount * 3);
+        const particleColors = new Float32Array(particleCount * 3);
+        const particleColor = new THREE.Color(0x888888); // Medium gray particles
+
+        for (let i = 0; i < particleCount; i++) {
+          // Position particles randomly around the icosahedron
+          const r = 3 + Math.random() * 3; // Radius from 3 to 6
+          const theta = Math.random() * Math.PI * 2;
+          const phi = Math.acos(Math.random() * 2 - 1);
+          particlePositions[i * 3] = r * Math.sin(phi) * Math.cos(theta);
+          particlePositions[i * 3 + 1] = r * Math.sin(phi) * Math.sin(theta);
+          particlePositions[i * 3 + 2] = r * Math.cos(phi);
+          particleColor.toArray(particleColors, i * 3);
+        }
+        particleGeometry.setAttribute(
+          "position",
+          new THREE.BufferAttribute(particlePositions, 3)
+        );
+        particleGeometry.setAttribute(
+          "color",
+          new THREE.BufferAttribute(particleColors, 3)
+        );
+
+        const particleMaterial = new THREE.PointsMaterial({
+          size: 0.05,
+          vertexColors: true,
+          transparent: true,
+          opacity: 0.5,
+          blending: THREE.AdditiveBlending,
+          sizeAttenuation: true,
+        });
+        particles = new THREE.Points(particleGeometry, particleMaterial);
+        scene.add(particles);
+
+        // Dynamic Connecting Lines between particles
+        const lineMaterial = new THREE.LineBasicMaterial({
+          color: 0x666666, // Darker gray for lines
+          transparent: true,
+          opacity: 0.05, // Very subtle lines
+          blending: THREE.AdditiveBlending,
+        });
+        const lineGeometry = new THREE.BufferGeometry();
+        // Estimate max possible lines for allocation (each particle connects to a few others)
+        const maxLineInstances = particleCount * 4;
+        const linePositions = new Float32Array(maxLineInstances * 2 * 3); // 2 points per line, 3 coords per point
+        lineGeometry.setAttribute(
+          "position",
+          new THREE.BufferAttribute(linePositions, 3)
+        );
+        lines = new THREE.LineSegments(lineGeometry, lineMaterial);
+        scene.add(lines);
+
+        // Event Listeners for interactivity and responsiveness
+        window.addEventListener("resize", onWindowResizeThreeJS, false);
+        document.addEventListener(
+          "mousemove",
+          onDocumentMouseMoveThreeJS,
+          false
+        );
+        document.addEventListener(
+          "touchstart",
+          onDocumentTouchStartThreeJS,
+          false
+        );
+        document.addEventListener(
+          "touchmove",
+          onDocumentTouchMoveThreeJS,
+          false
+        );
+      }
+
+      function onWindowResizeThreeJS() {
+        windowHalfX = window.innerWidth / 2;
+        windowHalfY = window.innerHeight / 2;
+        camera.aspect = window.innerWidth / window.innerHeight;
+        camera.updateProjectionMatrix();
+        renderer.setSize(window.innerWidth, window.innerHeight);
+      }
+
+      function onDocumentMouseMoveThreeJS(event) {
+        mouseX = event.clientX - windowHalfX;
+        mouseY = event.clientY - windowHalfY;
+      }
+
+      function onDocumentTouchStartThreeJS(event) {
+        if (event.touches.length === 1) {
+          mouseX = event.touches[0].pageX - windowHalfX;
+          mouseY = event.touches[0].pageY - windowHalfY;
+        }
+      }
+
+      function onDocumentTouchMoveThreeJS(event) {
+        if (event.touches.length === 1) {
+          event.preventDefault();
+          mouseX = event.touches[0].pageX - windowHalfX;
+          mouseY = event.touches[0].pageY - windowHalfY;
+        }
+      }
+
+      function animateThreeJS() {
+        requestAnimationFrame(animateThreeJS);
+
+        // Rotate icosahedron
+        icosahedron.rotation.x += 0.0005;
+        icosahedron.rotation.y += 0.001;
+
+        // Rotate particles system
+        particles.rotation.y += 0.0007;
+        particles.rotation.x += 0.0002;
+
+        // Update dynamic lines
+        const currentLinePositions = lines.geometry.attributes.position.array;
+        let lineIndex = 0;
+        const particlePositionsArray =
+          particles.geometry.attributes.position.array;
+        const tempParticle1 = new THREE.Vector3();
+        const tempParticle2 = new THREE.Vector3();
+
+        // Clear existing lines
+        for (let i = 0; i < currentLinePositions.length; i++) {
+          currentLinePositions[i] = 0; // Resetting to zero effectively hides them
+        }
+
+        for (let i = 0; i < particlePositionsArray.length / 3; i++) {
+          tempParticle1
+            .set(
+              particlePositionsArray[i * 3],
+              particlePositionsArray[i * 3 + 1],
+              particlePositionsArray[i * 3 + 2]
+            )
+            .applyMatrix4(particles.matrixWorld); // Get world position of particle
+
+          for (let j = i + 1; j < particlePositionsArray.length / 3; j++) {
+            tempParticle2
+              .set(
+                particlePositionsArray[j * 3],
+                particlePositionsArray[j * 3 + 1],
+                particlePositionsArray[j * 3 + 2]
+              )
+              .applyMatrix4(particles.matrixWorld); // Get world position of particle
+
+            // Connect if particles are close enough
+            if (tempParticle1.distanceTo(tempParticle2) < 0.8) {
+              // Adjust connection distance
+              currentLinePositions[lineIndex++] = tempParticle1.x;
+              currentLinePositions[lineIndex++] = tempParticle1.y;
+              currentLinePositions[lineIndex++] = tempParticle1.z;
+
+              currentLinePositions[lineIndex++] = tempParticle2.x;
+              currentLinePositions[lineIndex++] = tempParticle2.y;
+              currentLinePositions[lineIndex++] = tempParticle2.z;
+            }
+          }
+        }
+        lines.geometry.attributes.position.needsUpdate = true;
+        lines.geometry.setDrawRange(0, lineIndex); // Only draw actual lines used
+
+        // Camera movement based on mouse/touch
+        camera.position.x += (mouseX * 0.0005 - camera.position.x) * 0.05;
+        camera.position.y += (-mouseY * 0.0005 - camera.position.y) * 0.05;
+        camera.lookAt(scene.position);
+
+        renderer.render(scene, camera);
+      }
+
+      // Initialize Three.js when the window loads
+      window.onload = function () {
+        initThreeJS();
+        animateThreeJS();
+      };
     </script>
+    <!-- Bootstrap JS CDN (optional, for components that require JS) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
