feat: enhance publisher dashboard with edit article modal and styling updates

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -65,6 +65,7 @@
           #cccccc,
           #999999
         ); /* Light gray to darker gray */
+        background-clip: text;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         animation: pulse-slow 3s infinite ease-in-out;
