--- a/Frontend/pages/Publisher/publisher-dashboard.html
+++ b/Frontend/pages/Publisher/publisher-dashboard.html
@@ -5,12 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Publisher Dashboard - BlogHub</title>
     <link rel="icon" href="/Frontend/assets/image/blogging.png" />
-    <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <!-- Font Awesome for icons -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -76,7 +74,6 @@
     </style>
   </head>
   <body>
-    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light mb-4">
       <div class="container-fluid">
         <a class="navbar-brand fw-bold text-primary" href="#">
@@ -134,13 +131,16 @@
           <i class="fas fa-newspaper me-2"></i>My Articles
         </h2>
         <div>
-          <a href="/Frontend/pages/Publisher/AI-generated-article.html" class="btn btn-outline-primary" id="generateArticleBtn">
+          <a
+            href="/Frontend/pages/Publisher/payment.html"
+            class="btn btn-outline-primary"
+            id="generateArticleBtn"
+          >
             <i class="fas fa-magic me-1"></i> Generate Article
           </a>
         </div>
       </div>
 
-      <!-- Article Tabs -->
       <ul class="nav nav-pills mb-4" id="articleTabs" role="tablist">
         <li class="nav-item" role="presentation">
           <button
@@ -168,7 +168,6 @@
         </li>
       </ul>
 
-      <!-- Tab Content -->
       <div class="tab-content" id="articleTabsContent">
         <div
           class="tab-pane fade show active"
@@ -176,9 +175,7 @@
           role="tabpanel"
           aria-labelledby="published-tab"
         >
-          <div class="row g-3" id="publishedContainer">
-            <!-- Published articles will be loaded here -->
-          </div>
+          <div class="row g-3" id="publishedContainer"></div>
           <div class="text-center py-5" id="publishedEmpty">
             <div class="mb-3">
               <i class="fas fa-newspaper fa-4x text-muted mb-3"></i>
@@ -203,9 +200,7 @@
           role="tabpanel"
           aria-labelledby="scheduled-tab"
         >
-          <div class="row g-3" id="scheduledContainer">
-            <!-- Scheduled articles will be loaded here -->
-          </div>
+          <div class="row g-3" id="scheduledContainer"></div>
           <div class="text-center py-5" id="scheduledEmpty">
             <div class="mb-3">
               <i class="fas fa-calendar-alt fa-4x text-muted mb-3"></i>
@@ -226,7 +221,6 @@
       </div>
     </div>
 
-    <!-- Create Article Modal -->
     <div
       class="modal fade"
       id="createArticleModal"
@@ -326,10 +320,110 @@
       </div>
     </div>
 
-    <!-- Bootstrap + jQuery -->
+    <div
+      class="modal fade"
+      id="editArticleModal"
+      tabindex="-1"
+      aria-labelledby="editArticleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="editArticleModalLabel">
+              <i class="fas fa-edit me-2"></i>Edit Article
+            </h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form id="editArticleForm">
+              <input type="hidden" id="editArticleId" />
+              <div class="mb-3">
+                <label for="editArticleTitle" class="form-label"
+                  >Article Title</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="editArticleTitle"
+                  placeholder="Enter article title"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="editArticleImage" class="form-label"
+                  >Featured Image</label
+                >
+                <input
+                  class="form-control"
+                  type="file"
+                  id="editArticleImage"
+                  accept="image/*"
+                />
+              </div>
+              <div class="mb-3">
+                <label for="editArticleContent" class="form-label"
+                  >Content</label
+                >
+                <textarea
+                  class="form-control"
+                  id="editArticleContent"
+                  rows="10"
+                  placeholder="Write your article here..."
+                ></textarea>
+              </div>
+              <div class="row">
+                <div class="col-md-6 mb-3">
+                  <label for="editArticleCategory" class="form-label"
+                    >Category</label
+                  >
+                  <select class="form-select" id="editArticleCategory">
+                    <option value="" selected>Select a category</option>
+                    <option value="technology">Technology</option>
+                    <option value="web-dev">Web Development</option>
+                    <option value="ai">Artificial Intelligence</option>
+                    <option value="programming">Programming</option>
+                  </select>
+                </div>
+                <div class="col-md-6 mb-3">
+                  <label for="editPublishDate" class="form-label"
+                    >Publish Date</label
+                  >
+                  <input
+                    type="datetime-local"
+                    class="form-control"
+                    id="editPublishDate"
+                  />
+                  <div class="form-text">
+                    Leave empty to publish immediately
+                  </div>
+                </div>
+              </div>
+              <div class="d-flex justify-content-end mt-4">
+                <button
+                  type="button"
+                  class="btn btn-outline-secondary me-2"
+                  data-bs-dismiss="modal"
+                >
+                  Cancel
+                </button>
+                <button type="submit" class="btn btn-primary">
+                  <i class="fas fa-save me-1"></i> Save Changes
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
     <script src="/Frontend/JavaScript/Publisher/publisher-dashboard.js"></script>
   </body>
 </html>
